--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -12,3 +12,4 @@
       - else
         .col-md-1
           = link_to "unfollow", delete_relation_category_path(category), {class: "btn btn-default btn-lg btn-block", method: :delete}
+= render "categories/create"
