--- a/app/views/pictures/_upload.html.haml
+++ b/app/views/pictures/_upload.html.haml
@@ -1,5 +1,5 @@
 = form_for @picture, {multipart: true} do |form|
-  = form.file_field :location
+  = form.file_field :location, multiple: true
   = form.hidden_field(:category_id, value: @category.id)
   = form.text_field :description
   = form.submit "upload", method: :put
