--- a/app/views/layouts/_users_all.html.haml
+++ b/app/views/layouts/_users_all.html.haml
@@ -1,7 +1,7 @@
 .users_all.col-md-12
-  .user-list
+  .user-list.col-md-10
     %ul{class: "left-panel nav  nav-pills nav-stacked pull-left"}
       - @users_all.each do |user|
         %li
           = link_to user.email, conversations_path(user_id: user.id), {method: :post}
-  %button.hide-chat-btn.glyphicon.glyphicon-menu-right
+  %button.hide-chat-btn.glyphicon.glyphicon-menu-right.col-md-1
