--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ body {
 }
 
 h1 {
-  padding-left: 30px;
+  //padding-left: 30px;
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
@@ -50,7 +50,7 @@ h1 {
 }
 
 .pictures {
-  padding-left: 50px;
+  //padding-left: 50px;
   .pagination {
     font-size: 2em;
   }
@@ -75,9 +75,12 @@ h1 {
   .nav {
     padding-top: 5px;
     padding-bottom: 5px;
+    max-width: 100%;
     li {
       a {
         font-size: small;
+        max-width: 100%;
+        tfont-stretch: expanded;
       }
     }
   }
@@ -94,9 +97,9 @@ h1 {
   }
   .hide-chat-btn{
     height: 100vh;
-    width: 1vw;
+    //max-width: 100%;
     display:block;
-    text-align:center
+    text-align:center;
   }
 }
 
