--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,8 +72,26 @@ h1 {
   max-height: 50vh;
   max-width: 50vw;
 }
+
+.msg-img{
+  min-height: 10vh;
+  max-height: 10vh;
+  max-width: 10vw;
+
+}
 .carousel{
   max-width: 30vw;
+}
+.youtube{
+  min-height: 16vh;
+  max-height: 16vh;
+  max-width: 16vw;
+}
+.youtube-video{
+  min-height: 100vh;
+  max-height: 100vh;
+  min-width: 100%;
+
 }
 .users_all{
   .navbar {
@@ -96,6 +114,7 @@ h1 {
   //width: 4vw;
   .user-list{
     height:100vh;
+    display: none;
     //visibility: hidden;
     //width: 0px;
   }
@@ -132,6 +151,11 @@ h1 {
       background-color: aliceblue;
       .row{
         padding-left: 5px;
+      }
+      img{
+        min-height: 10vh;
+        max-height: 10vh;
+        max-width: 10vw;
       }
     }
     .messages{
