--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,5 +4,9 @@
 .navbar.navbar-default.navbar-fixed-bottom
   .mini-chat.pull-right
 
+.modal.fade{id: 'myModal',tabindex: "-1", role: "dialog", 'aria-labelledby': "myModalLabel"}
+  .modal-dialog.modal-lg{role: "document"}
+    .modal-content
+      .modal-body
 
 -#.mini_chat.navbar.navbar-default.navbar-fixed-bottom
